# opm-models

./: .dir-locals.el  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CMakeLists_files.cmake  COPYING  CTestConfig.cmake  EwomsConfig.cmake.in  FAQ  INSTALL  INSTALL.cmake  Makefile.am  README  config.h.cmake  configure  configure.ac  debug-clang.opts  debug-gcc.opts  debug.opts  dune.module  ewoms-prereqs.cmake  ewoms.pc.cmake  ewoms.pc.in  ewoms_libbash_completors.sh  ewoms_product_completors.sh  opm-models-prereqs.cmake  optim-clang.opts  optim-gcc.opts  optim.opts
dumux/: Makefile.am
dumux/boxmodels/: Makefile.am
dumux/boxmodels/1p/: 1pboundaryratevector.hh  1pboxjacobian.hh  1pboxmodel.hh  1pboxproblem.hh  1pelementdata.hh  1pfluxdata.hh  1pfluxvariables.hh  1pindices.hh  1plocalresidual.hh  1pmodel.hh  1pprimaryvariables.hh  1pproblem.hh  1pproperties.hh  1ppropertydefaults.hh  1pratevector.hh  1pvertexdata.hh  1pvolumevariables.hh  Makefile.am
dumux/boxmodels/1p2c/: 1p2cboundaryratevector.hh  1p2cboxjacobian.hh  1p2cboxmodel.hh  1p2cboxproblem.hh  1p2celementdata.hh  1p2cfluxdata.hh  1p2cfluxvariables.hh  1p2cindices.hh  1p2clocalresidual.hh  1p2cmodel.hh  1p2cprimaryvariables.hh  1p2cproblem.hh  1p2cproperties.hh  1p2cpropertydefaults.hh  1p2cratevector.hh  1p2cvertexdata.hh  1p2cvolumevariables.hh
dumux/boxmodels/2p/: 2pboundaryratevector.hh  2pboxjacobian.hh  2pboxmodel.hh  2pboxproblem.hh  2pelementdata.hh  2pfluidstate.hh  2pfluxdata.hh  2pfluxvariables.hh  2pindices.hh  2plocalresidual.hh  2pmodel.hh  2pnewtoncontroller.hh  2pprimaryvariables.hh  2pproblem.hh  2pproperties.hh  2ppropertydefaults.hh  2pratevector.hh  2pvertexdata.hh  2pvolumevariables.hh
dumux/boxmodels/2p2c/: 2p2cboundaryratevector.hh  2p2cboxjacobian.hh  2p2cboxmodel.hh  2p2cboxproblem.hh  2p2celementdata.hh  2p2cfluidstate.hh  2p2cfluxdata.hh  2p2cfluxvariables.hh  2p2cindices.hh  2p2clocalresidual.hh  2p2cmodel.hh  2p2cnewtoncontroller.hh  2p2cprimaryvariables.hh  2p2cproblem.hh  2p2cproperties.hh  2p2cpropertydefaults.hh  2p2cratevector.hh  2p2cvertexdata.hh  2p2cvolumevariables.hh
dumux/boxmodels/2p2cni/: 2p2cniboundaryratevector.hh  2p2cniboxjacobian.hh  2p2cniboxmodel.hh  2p2cniboxproblem.hh  2p2cnielementdata.hh  2p2cnifluxdata.hh  2p2cnifluxvariables.hh  2p2cniindices.hh  2p2cnilocalresidual.hh  2p2cnimodel.hh  2p2cninewtoncontroller.hh  2p2cniproblem.hh  2p2cniproperties.hh  2p2cnipropertydefaults.hh  2p2cnivertexdata.hh  2p2cnivolumevariables.hh
dumux/boxmodels/2pni/: 2pniboundaryratevector.hh  2pniboxjacobian.hh  2pniboxmodel.hh  2pniboxproblem.hh  2pnielementdata.hh  2pnifluxdata.hh  2pnifluxvariables.hh  2pniindices.hh  2pnilocalresidual.hh  2pnimodel.hh  2pniproblem.hh  2pniproperties.hh  2pnipropertydefaults.hh  2pnivertexdata.hh  2pnivolumevariables.hh
dumux/boxmodels/3p3c/: 3p3cboundaryratevector.hh  3p3cfluxvariables.hh  3p3cindices.hh  (+9 more)
dumux/common/: basicproperties.hh  boundaryconditions.hh  boundarytypes.hh  cubegridcreator.hh  dgfgridcreator.hh  dynamictabulated2dfunction.hh  exceptions.hh  fixedlengthspline_.hh  math.hh  parameters.hh  propertysystem.hh  quad.hh  quadraturegeometries.hh  simplexgridcreator.hh  spline.hh  splinecommon_.hh  start.hh  statictabulated2dfunction.hh  tabulated2dfunction.hh  timemanager.hh  valgrind.hh  variablelengthspline_.hh
dumux/decoupled/: Makefile.am
dumux/fractionalflow/: define2pmodel.hh  fractionalflow.hh  fractionalflowproblem.hh  p1variableclass.hh  primaryvariables.hh  variableclass2p.hh  variableclass2p2c.hh  variableclass2p2cni.hh
dumux/freeflow/: Makefile.am
dumux/io/: restart.hh  vtkmultiwriter.hh  vtknestedfunction.hh
dumux/istl/: Makefile.am  convergencecriterion.hh  fixpointcriterion.hh  residreductioncriterion.hh  solvers.hh  weightedresidreductioncriterion.hh
dumux/linear/: boxlinearsolver.hh  boxparallelamgsolver.hh  domesticoverlapfrombcrsmatrix.hh  elementborderlistfromgrid.hh  foreignoverlapfrombcrsmatrix.hh  globalindices.hh  linearsolverproperties.hh  overlappingbcrsmatrix.hh  overlappingblockvector.hh  overlappingoperator.hh  overlappingpreconditioner.hh  overlappingscalarproduct.hh  overlaptypes.hh  seqsolverbackend.hh  solverpreconditioner.hh  vertexborderlistfromgrid.hh
dumux/material/: Makefile.am
dumux/new_models/: tags.hh
dumux/nonlinear/: new_newtoncontroller.hh  new_newtonmethod.hh  newtoncontroller.hh  newtonconvergencewriter.hh  newtonmethod.hh  nullconvergencewriter.hh
dumux/parallel/: mpibuffer.hh  vertexhandles.hh
dumux/twophase/: twophasemodel.hh
test/2p2c/: CMakeLists.txt  Makefile.am  injectionproblem.hh  injectionspatialparameters.hh  new_injectionproblem.hh  new_test_2p2c.cc  test_2p2c.cc
test/2p2cni/: Makefile.am  new_waterairproblem.hh  test_2p2cni.cc  waterairproblem.hh  waterairspatialparameters.hh
test/boxmodels/: CMakeLists.txt  Makefile.am  co2injection_flash.cc  co2injection_flash_ni.cc  co2injection_immiscible.cc  co2injection_immiscible_ni.cc  co2injection_immisicble_ni.cc  co2injection_ncp.cc  co2injection_ncp_ni.cc  co2injection_pvs.cc  co2injection_pvs_ni.cc  cuvette_pvs.cc  cuvette_pvs.input  diffusion_flash.cc  diffusion_ncp.cc  diffusion_pvs.cc  finger_immiscible.cc  finger_immiscible.input  groundwater_immiscible.cc  groundwater_immiscible.input  infiltration_pvs.cc  infiltration_pvs.input  injection_flash.cc  injection_flash.input  injection_flash_ni.cc  injection_immiscible.cc  injection_immiscible_ni.cc  injection_immisicble.cc  injection_immisicble_ni.cc  injection_immisicble_ni.input  injection_ncp.cc  injection_ncp_ni.cc  injection_pvs.cc  injection_pvs.input  injection_pvs_ni.cc  lens_immiscible.cc  lens_immiscible.input  lens_richards.cc  lens_richards.input  obstacle_immiscible.cc  (+31 more)
test/fractionalflow/: Makefile.am  test_decoupled2p2c.cc  test_decoupled2p2cni.cc  test_fractionalflow.cc  test_fractionalflow_soilproperties.hh  test_fractionalflow_testproblem.hh  testproblem_2p2c.hh
test/transport/: Makefile.am  test_fvtransport.cc  test_implicitfvtransport.cc  test_transport.cc
test/twophase/: Makefile.am  test_twophase.cc
(+1743 files in other folders)
